--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ APP_ORIGIN=http://localhost:5173
 MONGO_URI="mongodb://127.0.0.1:27017/JWTmern"
 JWT_SECRET=jsfgfjguwrg8783wgbjs849h2fu3cnsvh8wyr8fhwfvi2g225
 JWT_REFRESH_SECRET= 825y8i3hnfjmsbv7gwajbl7fobqrjfvbs7gbfj2q3bgh8f42
-# a verified sender email
+# a verified sender emai
 EMAIL_SENDER=t
 RESEND_API_KEY=re_WKPdceoM_HPJM3tomGnckBZ4MFxdUey5T
